# nmea_mux

./: README.md  activate.sh  pyproject.toml  requirements.txt  setup_env.sh  setup_nmea_service.sh
files/: nmea_mux.service.template
nmea_mux/: nmea_config.py  nmea_mux.py  nmea_mux2.py  requirements.txt  send_dummy_msgs.py  udp_listener.py
tests/: test_nmea_mux.py
